# stage_4A_Harmonic

./: README.md
CCAddons_tuto/: binding.gyp  binding_test.cc  package.json
Doc/: Andromede - Software achitecture.docx  NCCP_DataModel_V12.3.17.doc
REST_API_test (Version demo dans CP9000)/: expressnodejs.mjs  package-lock.json  package.json
REST_API_test (Version demo dans CP9000)/routes/: login.js  users.js
api-app-cmake/: CMakeLists.txt  index.js  package-lock.json  package.json  test_database.js
api-app-cmake-swagger/: app.js  package-lock.json  package.json  swagger.json
api-app-cmake-swagger/addon/: addon.cc
api-app-cmake-swagger/database/: users.db
api-app-cmake-swagger/error/: ApiError.js
api-app-cmake-swagger/keys/: generateKeypair.js
api-app-cmake-swagger/middleware/: api_error_handler.js  verify_user.js
api-app-cmake-swagger/routes/app/: api.js  users_management.js
api-app-cmake-swagger/routes/auth/: users.js
api-app-cmake/lib/: binding.js
api-app-cmake/routes/app/: api.js  login.js
api-app-jwt/: app.js  package-lock.json  package.json  testDb.js  testDb2.js  test_app.js  test_app2.js  test_database.db  test_database.js  users.json
api-app-jwt-nedb/: CMakeLists.txt  app.js  package.json  testing.js
api-app-jwt-nedb/config/: database.js
api-app-jwt-nedb/lib/: passportUtils.js
api-app-jwt-nedb/middleware/: time_logger.js
api-app-jwt-nedb/routes/app/: api.js  users_management.js
api-app-jwt-nedb/routes/auth/: users.js
api-app-jwt-nedb/views/: login.ejs
api-app-jwt/addon/: addon.cc
api-app-jwt/config/: passport-setup.js
api-app-jwt/keys/: id_rsa_pub.pem
api-app-jwt/lib/: passportUtils.js
api-app-jwt/routes/app/: api.js  users.js
api-app-jwt/routes/auth/: auth-routes.js
api-app-local/: app.js  package-lock.json  package.json  test_app.js  test_database.js
api-app-local/addon/: addon.cc  custom_object.cc  custom_object.h
api-app-local/config/: passport-setup.js
api-app-local/lib/: passportUtils.js
api-app-local/middleware/: custom_logger.js  isLoggedin.js
api-app-local/routes/app/: api.js
api-app-local/routes/auth/: auth-routes.js
api-app-local/views/: home.ejs  login.ejs  register.ejs
api-app-node-gyp/: index.js  package-lock.json  package.json
api-app-node-gyp/middleware/: logger.js  verify_user_jwt.js
api-app-node-gyp/routes/app/: api.js  user.js
api-app-node-gyp/wrapping/: addon.cc  binding_test.cc  finding.cc
api-app-oauth/: app.js  package-lock.json  package.json  test_app.js
api-app-oauth/config/: keys.js  passport-setup.js
api-app-oauth/middleware/: isLoggedin.js  verify-user.js
api-app-oauth/routes/app/: test-login.js
api-app-oauth/routes/auth/: auth-routes.js
api-app-oauth/views/: home.ejs  login.ejs
demo-cmake/: CMakeLists.txt  package-lock.json  package.json
demo-cmake/addon/: addon.cc
demo1/: index.js  package-lock.json  package.json
demo1/middleware/: logger.js
demo1/routes/app/: api.js  login.js
demo2/: binding.gyp  index2.js  package-lock.json  package.json
demo2/routes/app/: api.js  login.js
demo2/wrapping/: addon.cc  binding_test.cc  finding.cc  finding.h
node-swagger-demo/: app.js  package-lock.json
rapport/: Rapport Stage.docx
rapport/Doc/: ADAPTOR_USER_GUIDE_draft_v11_in_progress.doc  Cheat Sheet.txt  expressnodejs.mjs
rapport/RAPPORT FINAL/: 2021-Maquette-couverture-rapport-de-stage-V.-26-03-2021.docx
rapport/rapport docx/: 2021 - Maquette couverture rapport de stage - V. 26-03-2021.docx
rest_api/: CMakeLists.txt  wrapper.sh.in
rest_api/include/: CIpstream.h  CLogo.h  CRestapiDefault.h
rest_api/nodejs/: CMakeLists.txt  app.js  package-lock.json
rest_api/nodejs/addon/: addon.cc  addon.cc.keep
rest_api/nodejs/config/: passport-setup.js
rest_api/nodejs/keys/: id_rsa_priv.pem
rest_api/nodejs/lib/: passportUtils.js
rest_api/nodejs/middleware/: isAdmin.js
rest_api/nodejs/routes/app/: api.js
rest_api/nodejs/routes/auth/: users.js
rest_api/nodejs/views/: home.ejs  register.ejs
rest_api/src/: CIpstream.cc  CLogo.cc  CRestapiDefault.cc
tuto-authen/express-session-authentication/final/: package-lock.json  package.json
tuto-authen/passport-authentication/: app.js  package-lock.json  package.json  passport-setup.js
tuto-authen/passport-authentication/routes/: index.js
tuto-authen/passport-authentication/sessions/: 0yaeQRUg7U6O6UfH5O9q_GhuiMKr_jMP.json  BFEKB6jRAH34igsjWZ79DypoT87wGmrg.json  d4kD33-Br33aumcPx9wpjFpt2wSn9UdN.json
tuto-authen/passport-authentication/views/: login.pug
